# Song-Lyric-Search-Engine

./: .gitignore  CMakeLists.txt  README.md  makefile  run-app.sh  run-tests.sh  set-env.sh.in
TestCases/: testcase01.cpp
include/: AuthorizationHandler.h  GeniusAuthorizationHandler.h  HttpServerHandler.h  SearchEngine.h  SearchEngineConfig.h  SongDatabase.h  SpotifyAuthorizationHandler.h  WebAPIHandler.h
src/: AuthorizationHandler.cpp  GeniusAuthorizationHandler.cpp  HttpServerHandler.cpp  SearchEngine.cpp  SearchEngineConfig.cpp  SpotifyAuthorizationHandler.cpp  main.cpp
